# torch-EQL

./: .gitignore  EQL_test.py  README.md  pyproject.toml
torch_EQL/: EQL.py  loss.py
torch_eql/: cli.py
torch_eql/utils/: __init__.py  dissect.py  generation.py  graphing.py  heuristics.py
