[project]
name = "torch_eql"
version = "0.1.0"
authors = [
    {name = "Jorge Jiménez García", email = "jjimgar1@outlook.com"},
]
description = " A PyTorch implementation of Equation Learners (Georg Martius and Christoph H. Lampert, 2016)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "torch",
    "typing",
    "matplotlib",
    "prettytable",
    "sympy",
    "scikit-learn",
    "pyyaml",
    "tqdm",
    "pandas",
    "pykan",
    "scipy",
    "numpy<1.25.0"
]

[tool.setuptools]
packages = ["torch_eql"]

[project.scripts]
eqlcli = "torch_eql.cli:cli_call"